style.css
#labelforsetting,
#labelforvisualmode,
#switchforvisualmode:checked+#labelforvisualmode {
    background-repeat: no-repeat;
    background-position: center
}

#labelforsetting,
#labelforsound {
    height: 40px;
    background-size: 60%
}

#preloader,
.invertapplied,
.invertsettinglabel {
    filter: invert(1)
}

#preloader,
noscript {
    width: 100%;
    height: 100%
}

body,
noscript {
    background-color: var(--color-dark-mode)
}

.main,
body {
    overflow-x: hidden
}

.link
{
    color: #14efe1;
}

#backtotopbutton article,
:root {
    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif
}

.eye,
.image-div,
.logo,
.navbar,
.project-box,
.resume-btn,
footer {
    overflow: hidden
}

.cta,
.github-redirect,
.navbar-tabs-ul a {
    text-decoration: none
}

#GmailLogo,
.sign svg path {
    fill: white
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    -webkit-tap-highlight-color: transparent
}

::selection {
    background-color: rgba(128, 0, 255, 0.3);
    color: #fff
}

::-moz-selection {
    background-color: rgba(128, 0, 255, 0.3);
    color: #fff
}

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    overflow-x: hidden
}

:root {
    cursor: default;
    --color-white: #fff;
    --color-black: #000;
    --color-dark-mode: #11111b;
    --color-light-mode: #ece7e1;
    --color-ddd-color: #ddd;
    --color-gray: #c4c4c4;
    --color-purple: #8000ff;
    --color-light-purple: #cf59e6;
    --color-light-blue: #6bc5f8;
    --color-navbarBorder-dark: #e2e2e207;
    --color-shadowDark: rgba(0, 0, 0, 0.137);
    --static-heading-gradient-blue: #b0f3f1;
    --static-heading-gradient-pink: #ffcfdf;
    --tech-stack-box-first-color: #1a1a29;
    --tech-stack-box-second-color: rgba(27, 27, 40, 0);
    --tech-stack-box-border-color: #292929
}

#hello-friend,
.footer-bottom article,
.getintouch-heading article,
.language-speak article,
.navbar-tabs-ul li,
.two-words article {
    font-family: fira code
}

::-webkit-scrollbar {
    width: 5px
}

::-webkit-scrollbar-track {
    background: #0a0a10
}

::-webkit-scrollbar-thumb {
    background-color: #8000ff
}

.cursor-inner {
    width: 8px;
    height: 8px;
    background-color: var(--color-light-blue)
}

.cursor-outer {
    width: 35px;
    height: 35px;
    border: 2px solid #fff
}

.cursor-inner,
.cursor-outer {
    position: fixed;
    top: 0;
    left: 0;
    transform: translate(-50%, -50%);
    border-radius: 50%;
    z-index: 9999;
    pointer-events: none
}

.setting-container,
.settingactivate {
    transform-origin: left;
    transition-duration: .5s
}

.cursor-inner.hover {
    width: 25px;
    height: 25px;
    transition: .2s;
    mix-blend-mode: difference
}

.cursor-outer.hover {
    width: 50px;
    height: 50px;
    transition: .2s
}

.activeThistab:before,
.navbar-tabs-ul li:hover:before {
    background-color: var(--color-white);
    height: 10px;
    width: 10px;
    left: -20px
}

.light-mode {
    --color-dark-mode: #ece7e1;
    --color-black: #fff;
    --color-white: #000;
    --color-ddd-color: rgb(31, 31, 31);
    --color-navbarBorder-dark: #d1d6eb;
    --static-heading-gradient-blue: #0f7878;
    --static-heading-gradient-pink: #f09bb9;
    --color-shadowDark: #e2ddd7;
    --tech-stack-box-first-color: #e7e2db;
    --tech-stack-box-second-color: #ece7e100;
    --tech-stack-box-border-color: #dad5cf
}

.setting-container {
    width: 60px;
    height: 50px;
    margin-left: 50px;
    display: flex;
    align-items: center;
    gap: 30px;
    padding: 20px 0
}

#labelforsetting {
    width: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 20px;
    background-image: url(src/svg/settings-svgrepo-com.svg);
    transition-duration: .5s;
    cursor: pointer
}

.soundtogglebuttoncontainer,
.visualmodetogglebuttoncontainer {
    align-items: center;
    width: fit-content;
    transition-duration: .3s
}

.settingactivate {
    width: 200px
}

.visualmodetogglebuttoncontainer {
    height: fit-content;
    display: flex;
    justify-content: center;
    transform: translate(-50px) scale(0)
}

.visualmodeshow {
    transition-duration: .3s;
    transform: translate(0) scale(1)
}

#switchforsetting,
#switchforsound,
#switchforvisualmode,
.hamburger,
.mobiletogglemenu {
    display: none
}

#switchforsetting:checked+#labelforsetting {
    transform: rotate(180deg);
    transition-duration: .5s
}

#labelforvisualmode {
    position: relative;
    width: 40px;
    height: 40px;
    background-image: url(src/png/crescent-moon.png);
    background-size: 50%;
    transition-duration: .5s;
    cursor: pointer
}

#switchforvisualmode:checked+#labelforvisualmode {
    transform: rotate(360deg);
    transition-duration: .5s;
    background-image: url(src/png/sun.png);
    background-size: 60%
}

.soundtogglebuttoncontainer {
    height: fit-content;
    display: flex;
    justify-content: center;
    transform: translate(-130px) scale(0)
}

#labelforsound,
#preloader {
    display: flex;
    align-items: center;
    background-repeat: no-repeat;
    background-position: center
}

.soundmodeshow {
    transition-delay: .1s;
    transition-duration: .5s;
    display: inline-block;
    transform: translate(0) scale(1)
}

.logo,
.logo:hover {
    transition-duration: 1s
}

#labelforsound {
    position: relative;
    justify-content: center;
    width: 40px;
    background-image: url(src/svg/Mute_Icon.svg);
    cursor: pointer;
    transition-duration: .5s
}

#switchforsound:checked+#labelforsound {
    transition-duration: .5s;
    background-image: url(src/svg/Speaker_Icon.svg);
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: center
}

header {
    width: 100%;
    height: 115px;
    display: flex;
    align-items: flex-end;
    justify-content: center
}
/* ... */

